--- a/templates/auth/new.plush.html
+++ b/templates/auth/new.plush.html
@@ -19,7 +19,7 @@
   <div class="sign-form">
     <h1>Sign In</h1>
 
-    <%= formFor(user, {action: authPath(), method: "POST"}) { %>
+    <%= formFor(user, {action: signinPath(), method: "POST"}) { %>
       <div class="mb-3">
         <%= f.InputTag("Email") %>
       </div>
